<resources>
    <string name="app_name">iClass</string>
    <string name="introduce">在线考勤服务</string>
    <string name="请输入课程号加课序号进行搜索">请输入课程号加课序号进行搜索</string>
    <string name="添加">添加</string>
    <string name="这门课已经上到第">这门课已经上到第</string>
    <string name="应到">应到：</string>
    <string name="实到">实到：</string>
    <string name="查看已到学生信息">查看已到学生</string>
    <string name="查看签到座位表">查看签到座位图</string>
    <string name="结束本次签到">结束本次签到</string>
    <string name="tips包括各种异常签到的同学">TIPS：”实到“包括各种异常签到/教师代签的同学</string>
    <string name="学生">学生</string>
    <string name="教师">教师</string>
    <string name="请输入您的用户名">请输入您的用户名</string>
    <string name="确认">确 认</string>
    <string name="请输入您的姓名">请输入您的姓名</string>
    <string name="您的密码是">您的密码是:</string>
    <string name="welcome_to_iclass_system">Welcome To iClass System</string>
    <string name="please_login_first">Please login first</string>
    <string name="请输入您的密码">请输入您的密码</string>
    <string name="记住密码">记住密码</string>
    <string name="自动登录">自动登录</string>
    <string name="登陆">登陆</string>
    <string name="签到">签到</string>
    <string name="历史信息">历史信息</string>
    <string name="个人中心">个人中心</string>
    <string name="tips蓝色位置均可入座">TIPS:蓝色位置均可入座</string>
    <string name="获取教室类型失败">获取教室类型失败</string>
    <string name="课程">课程</string>
    <string name="课程号">课程号</string>
    <string name="教室">教室</string>
    <string name="人数">人数</string>
    <string name="状态">状态</string>
    <string name="退出登录">退出登录</string>
    <string name="学生ID">学生ID</string>
    <string name="姓名">姓名:</string>
    <string name="学号">学号:</string>
    <string name="签到时间">签到时间:</string>
    <string name="签到状态">签到状态:</string>
    <string name="Ten分钟内签到">10分钟内签到</string>
    <string name="Forty分钟内签到">40分钟内签到</string>
    <string name="Ninety分钟内签到">90分钟内签到</string>
    <string name="Ninety分钟后签到">90分钟后签到</string>
    <string name="为TA这节课的表现打个分吧">为TA这节课的表现打个分吧！默认3分哦</string>
    <string name="提交">提 交</string>
    <string name="大节">大节</string>
    <string name="右上角打call">右上角打call！</string>
    <string name="已到">已到 </string>
    <string name="人">人</string>
    <string name="系统错误">系统错误</string>
    <string name="空">empty</string>
    <string name="详细信息">详细信息</string>
    <string name="快速扣分">快速扣分</string>
    <string name="快速加分">快速加分</string>
    <string name="查看本班所有学生">查看本班所有学生</string>
    <string name="学院">学院:</string>
    <string name="班级">班级:</string>
    <string name="查看学生列表">查看学生列表</string>
    <string name="教师代签">教师代签</string>
    <string name="性别">性别：</string>
    <string name="例16计科3班">例:16计科3班</string>
    <string name="参数设置">参数设置</string>
    <string name="总分">总分:</string>
    <string name="请输入整数">请输入正整数</string>
    <string name="单次迟到扣分">单次迟到扣分:</string>
    <string name="单次缺勤扣分">单次缺勤扣分:</string>
    <string name="单次好评加分">单次好评加分:</string>
    <string name="单次差评扣分">单次差评扣分:</string>
    <string name="恢复默认">恢复默认</string>
    <string name="平时成绩导出">平时成绩导出</string>
</resources>
