<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f3f1f1"
        android:orientation="horizontal">

        <view.PhotoText
            android:id="@+id/check_tab"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            custom:mText="@string/签到"
            custom:mTextColor="@drawable/textcolor_tab"

            custom:mphoto="@drawable/data_tab_selected" />

        <view.PhotoText
            android:id="@+id/history_tab"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            custom:mText="@string/历史信息"
            custom:mTextColor="@drawable/textcolor_tab"
            custom:mphoto="@drawable/user_tab_selected" />

        <view.PhotoText
            android:id="@+id/person_center_tab"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            custom:mText="@string/个人中心"
            custom:mTextColor="@drawable/textcolor_tab"
            custom:mphoto="@drawable/setting_tab_selected">

        </view.PhotoText>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigationBar"
        android:layout_alignParentStart="true" />

</RelativeLayout>
