<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgc"
    tools:context="com.example.hp.iclass.HistoryActivity.Teacher.OutputExcel.OutputInfo">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bgp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_back" />

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="301dp"
        android:layout_height="443dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"

        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:background="@drawable/background_login_div"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/参数设置"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:text="@string/总分"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/total_points"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"

                android:background="@drawable/qq_edit_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/请输入整数"
                android:inputType="number"
                android:maxLines="1"
                android:text="30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginLeft="10sp"
                android:text="@string/单次迟到扣分"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/each_late_score"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"

                android:background="@drawable/qq_edit_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/请输入整数"
                android:inputType="number"
                android:maxLines="1"
                android:text="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginLeft="10sp"
                android:text="@string/单次缺勤扣分"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/each_uncheckin_score"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/qq_edit_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/请输入整数"
                android:inputType="number"
                android:maxLines="1"
                android:text="2" />
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginLeft="10sp"
                android:text="@string/单次好评加分"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/each_good_score"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/qq_edit_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/请输入整数"
                android:inputType="number"
                android:maxLines="1"
                android:text="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginLeft="10sp"
                android:text="@string/单次差评扣分"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/each_bad_score"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/qq_edit_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/请输入整数"
                android:inputType="number"
                android:maxLines="1"
                android:text="2" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_button_div"
            android:text="@string/确认"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_recovery"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_button_div"
            android:text="@string/恢复默认"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
