<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgc1"
    tools:context=".CommonActivity.BeginningActivity.Login.ForgetkeyActivity">

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/qq_edit_login"
        android:ems="10"
        android:hint="请输入新密码"
        android:maxLines="1"
        android:password="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701">

        <requestFocus />
    </EditText>

    <RadioGroup
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546">

        <RadioButton
            android:id="@+id/user_student"
            android:layout_width="80dp"
            android:layout_height="40sp"
            android:text="@string/学生" />

        <RadioButton
            android:id="@+id/user_teacher"
            android:layout_width="84dp"
            android:layout_height="40sp"
            android:text="@string/教师" />
    </RadioGroup>

    <android.support.v7.widget.Toolbar
        android:id="@+id/tl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/bgc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_back" />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/qq_edit_login"
        android:ems="10"
        android:hint="@string/请输入您的用户名"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/qq_edit_login"
        android:ems="10"
        android:hint="@string/请输入您的姓名"
        android:maxLines="1"
        android:password="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" >
    <requestFocus />
    </EditText>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_button_div"
        android:onClick="GetPassword"
        android:text="@string/确认"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

</android.support.constraint.ConstraintLayout>
