<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgc"
    tools:context=".TeacherCheckActivity.CheckConditionActivity">

    <TextView
        android:id="@+id/text_subject_th"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/这门课已经上到第"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

<!--    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="278dp"
        android:layout_height="425dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_login_div"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605">-->

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.398">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="95sp"
            android:layout_height="75sp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/实到"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="47dp" />

        <TextView
            android:id="@+id/text_present"
            android:layout_width="145dp"
            android:layout_height="75dp"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.229">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="95sp"
                android:layout_height="75sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"

                android:gravity="center"
                android:text="@string/应到"
                android:textSize="25sp"
                android:layout_weight="1.20" />

        <TextView
            android:id="@+id/text_should"
            android:layout_width="145sp"
            android:layout_height="75dp"
            android:gravity="center"
            android:textSize="30sp" />

    </LinearLayout>

        <Button
            android:id="@+id/button_student_list"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button_div"
            android:text="@string/查看学生列表"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.552"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button_seat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button_div"
            android:text="@string/查看签到座位表"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.672" />

        <Button
            android:id="@+id/button_end_check"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button_div2"
            android:text="@string/结束本次签到"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.809" />

    <!--</LinearLayout>-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bgp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips包括各种异常签到的同学"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <!--android:text="查看签到座位表" />-->
</android.support.constraint.ConstraintLayout>
